tests/baselines/reference/stringLiteralTypesOverloads05.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloads05.ts(6,10): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloads05.ts (1 errors) ====
    interface Animal { animal: {} };
    interface Dog extends Animal { dog: {} }
    interface Cat extends Animal { cat: {} }
    interface Moose extends Animal { moose: {} }
    
    function doThing(x: "dog"): Dog;
             ~~~~~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function doThing(x: "cat"): Cat;
    function doThing(x: string): Animal;
    function doThing(x: string, y?: string): Moose {
        return undefined;
    }